2010-10-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert-document): Autoload.
	(shr-img): Be silent.

	* mm-decode.el (mm-text-html-renderer): Default to shr.el rendering, if
	possible.
	(mm-shr): New function.

2010-10-02  Julien Danjou  <julien@danjou.info>

	* gnus-gravatar.el (gnus-gravatar-insert): Adjust character where we
	should go backward.

2010-10-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el: New file.

	* gnus-html.el (gnus-html-schedule-image-fetching): Be silent.

	* gnus-topic.el (gnus-topic-move-group): Fix the syntax of the
	completing read.

2010-10-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-check-bogus-newsgroups): Say how many groups
	we're being queried about.  Suggested by Dan Jacobson.

	* nndoc.el (nndoc-type-alist): Do babyl before mime-parts.  Suggested
	by Jason Eisner.

	* gnus-async.el (gnus-async-delete-prefetched-entry): Remove from hash
	table, too.  Suggested by Stefan Wiens.
	(gnus-async-prefetched-article-entry): Use intern-soft to avoid growing
	the table unnecessary.  Suggested by Stefan Wiens.

	* gnus-sum.el (gnus-summary-clear-local-variables): This is probably no
	longer needed, and probably doesn't work either, as pointed out by
	Stefan Wiens.
	(gnus-summary-exit): Remove call to the clearing function.
	(gnus-summary-exit-no-update): Ditto.

	* gnus-art.el (gnus-summary-save-in-file): Use with-current-buffer
	instead of gnus-eval-in-buffer-window to avoid popping up frames.
	Reported by Stefan Monnier.
	(gnus-summary-save-in-rmail): Ditto.

	* gnus-sum.el (gnus-summary-select-article-buffer): Show only the
	article buffer, instead of both the article buffer and the summary
	buffer.  Sort of suggested by Dan Jacobson.

	* gnus-win.el (gnus-buffer-configuration): Add an only-article spec.

	* nnmbox.el (nnmbox-read-mbox): Mark buffer for deletion on Gnus exit.
	Suggested by Dan Jacobson.

	* mm-encode.el (mm-content-transfer-encoding-defaults): Try to make the