@@ -9,6 +9,17 @@
 
 2010-10-02  Julien Danjou  <julien@danjou.info>
 
+	* gnus-score.el (gnus-summary-score-effect): Use gnus-remove-if-not
+	rather than remove-if-not.
+
+	* gnus-group.el (gnus-group-completing-read): Use gnus-remove-if-not
+	rather than remove-if-not.
+
+	* gnus-art.el (gnus-mime-view-part-as-type): Use gnus-remove-if-not
+	rather than remove-if-not.
+
+	* gnus-util.el (gnus-remove-if-not): Add this function.
+
 	* gnus-gravatar.el (gnus-gravatar-insert): Adjust character where we
 	should go backward.
 
